--- a/desafios/desafio03lista/lista.html
+++ b/desafios/desafio03lista/lista.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Desafio IMC</title>
+    <title>Array, adicionando listas</title>
 </head>
 <body>
-    <script src="imc.js"></script>
-  >
-
+    <script src="lista.js"></script>
 </body>
 </html>
